--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
                     positionValue = 'Director Operaciones';
                     oficina = 'Oficinas Centrales / HQ';
                     telefono = '660970356';
-                    correo = 'rafael.roman@dulmatesa.es';
+                    correo = 'rafa.roman@dulmatesa.es';
                     break;
                 case 'Raquel García':
                     positionValue = 'Técnica Calidad';
@@ -937,7 +937,7 @@
             <table cellpadding="0" cellspacing="0" border="0" width="100%" style="min-width:320px; max-width:600px; font-family: 'Montserrat', sans-serif, Arial, Helvetica; font-size:11pt; color:#333333;">
                 <tr>
                     <td style="padding-bottom: 5px;">
-                        <span style="font-family: 'Montserrat', sans-serif, Arial, Helvetica; font-size: 11pt; color: #333333;">${saludo}</span>
+                        <span style="font-family: 'Montserrat', sans-serif, Arial, Helvetica; font-size: 11pt; color: #333333; line-height: 1.2;">${saludo}</span>
                     </td>
                 </tr>
                 <tr>
@@ -961,35 +961,41 @@
                     <td>
                         <table cellpadding="0" cellspacing="0" border="0" style="width:100%; font-family: 'Montserrat', sans-serif, Arial, Helvetica; font-size: 9pt; color: #828282;">
                             <tr>
-                                <td width="20" style="vertical-align: middle; padding-right: 7px; padding-bottom: 2px;">
+                                <td width="20" style="vertical-align: middle; padding-right: 7px;">
                                     <img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Teléfono" width="15" height="15" style="display:block; border:0; max-width:15px; height:auto;">
                                 </td>
-                                <td style="vertical-align: middle; padding-bottom: 2px;">
-                                    <a href="tel:${telefono}" style="font-family: 'Montserrat', sans-serif, Arial, Helvetica; color: #828282; font-size: 9pt; text-decoration: none;"><span style="color: #828282;">${telefono}</span></a>
+                                <td style="vertical-align: middle;">
+                                    <a href="tel:${telefono}" style="font-family: 'Montserrat', sans-serif, Arial, Helvetica; color: #828282; font-size: 9pt; text-decoration: none; line-height: 1.2; mso-line-height-rule: exactly;"><span style="color: #828282;">${telefono}</span></a>
                                 </td>
                             </tr>
                             <tr>
-                                <td width="20" style="vertical-align: middle; padding-right: 6px; padding-bottom: 2px;">
+                                <td colspan="2" height="2" style="font-size:1px; line-height:2px;">&nbsp;</td> </tr>
+                            <tr>
+                                <td width="20" style="vertical-align: middle; padding-right: 6px;">
                                     <img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Correo" width="15" height="15" style="display:block; border:0; max-width:15px; height:auto;">
                                 </td>
-                                <td style="vertical-align: middle; padding-bottom: 2px;">
-                                    <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif, Arial, Helvetica; color: #828282; font-size: 9pt; text-decoration: none;"><span style="color: #828282;">${correo}</span></a>
+                                <td style="vertical-align: middle;">
+                                    <a href="mailto:${correo}" style="font-family: 'Montserrat', sans-serif, Arial, Helvetica; color: #828282; font-size: 9pt; text-decoration: none; line-height: 1.2; mso-line-height-rule: exactly;"><span style="color: #828282;">${correo}</span></a>
                                 </td>
                             </tr>
                             <tr>
-                                <td width="20" style="vertical-align: middle; padding-right: 7px; padding-bottom: 2px;">
+                                <td colspan="2" height="2" style="font-size:1px; line-height:2px;">&nbsp;</td> </tr>
+                            <tr>
+                                <td width="20" style="vertical-align: middle; padding-right: 7px;">
                                     <img src="https://www.dulmatesa.es/img/ubi-dulma.png" alt="Dirección" width="15" height="15" style="display:block; border:0; max-width:15px; height:auto;">
                                 </td>
-                                <td style="vertical-align: middle; padding-bottom: 2px;">
-                                    <span style="font-family: 'Montserrat', sans-serif, Arial, Helvetica; color: #828282; font-size: 9pt; text-decoration: none;">${address}</span>
+                                <td style="vertical-align: middle;">
+                                    <span style="font-family: 'Montserrat', sans-serif, Arial, Helvetica; color: #828282; font-size: 9pt; text-decoration: none; line-height: 1.2; mso-line-height-rule: exactly;">${address}</span>
                                 </td>
                             </tr>
                             <tr>
-                                <td width="20" style="vertical-align: middle; padding-right: 5px; padding-bottom: 2px;">
+                                <td colspan="2" height="2" style="font-size:1px; line-height:2px;">&nbsp;</td> </tr>
+                            <tr>
+                                <td width="20" style="vertical-align: middle; padding-right: 5px;">
                                     <img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Web Dulmatesa" width="18" height="18" style="display:block; border:0; max-width:18px; height:auto;">
                                 </td>
-                                <td style="vertical-align: middle; padding-bottom: 2px;">
-                                    <a href="https://www.dulmatesa.es" style="font-family: 'Montserrat', sans-serif, Arial, Helvetica; color: #0C96D4; font-size: 10pt; font-weight: bold; text-decoration: none;"><span style="color: #0C96D4;">Visita nuestra web: www.dulmatesa.es</span></a>
+                                <td style="vertical-align: middle;">
+                                    <a href="https://www.dulmatesa.es" style="font-family: 'Montserrat', sans-serif, Arial, Helvetica; color: #0C96D4; font-size: 10pt; font-weight: bold; text-decoration: none; line-height: 1.2; mso-line-height-rule: exactly;"><span style="color: #0C96D4;">Visita nuestra web: www.dulmatesa.es</span></a>
                                 </td>
                             </tr>
                         </table>
