--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   <body>
     <div class="container">
       <div class="form-section">
-        <h1>Generador de firmas<br>
+        <h1>Generador de firmas v2<br>
           Correo Dulmatesa</h1>
         Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
         tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
