--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
   <body>
     <div class="container">
       <div class="form-section">
-        <h1>Generador de firmas v3<br>
-          Correo Dulmatesa</h1>
+        <h1>Generador de firmas<br>
+          Correo Dulmatesa v4</h1>
         Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
         tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
         portapapeles".<br>
@@ -343,7 +343,7 @@
               portapapeles. Ahora pégala en Outlook.</strong></div>
         </div>
       </div>
-      <div class="preview-section"> 
+      <div class="preview-section">
         <div class="preview-container">
           <div class="preview" id="signaturePreview"></div>
         </div>
@@ -551,7 +551,7 @@
                     break;
                 case 'Esteban Tirado':               
                     positionValue = 'Jefe Cadena de Suministro Central';
-                    oficina = 'Sede Navarrés';
+                    oficina = 'Oficinas Centrales / HQ';
                     correo = 'esteban.tirado@dulmatesa.es';
                     telefono = '658877528';
                     break;
@@ -606,7 +606,7 @@
                 case 'Iván Camacho':               
                     positionValue = 'Encargado Producción';
                     oficina = 'Sede Puente Genil';
-                    correo = 'ivan.camacho@dulmatesa.es';
+                    correo = 'ivan.camacho@dulmatesa.s';
                     telefono = '962266191';
                     break;
                 case 'Javier Jaime':               
@@ -966,7 +966,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <img src="https://www.dulmatesa.es/img/spacer-dulmatesa.png" width="1" height="10" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
+                        <img src="https://www.dulmatesa.es/img/reciclado.png" width="1" height="10" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
                     </td>
                 </tr>
                 <tr>
@@ -982,7 +982,7 @@
                             </tr>
                             <tr>
                                 <td colspan="2">
-                                    <img src="https://www.dulmatesa.es/img/spacer-dulmatesa.png" width="1" height="2" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
+                                    <img src="https://www.dulmatesa.es/img/reciclado.png" width="1" height="2" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
                                 </td>
                             </tr>
                             <tr>
@@ -995,7 +995,7 @@
                             </tr>
                             <tr>
                                 <td colspan="2">
-                                    <img src="https://www.dulmatesa.es/img/spacer-dulmatesa.png" width="1" height="2" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
+                                    <img src="https://www.dulmatesa.es/img/reciclado.png" width="1" height="2" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
                                 </td>
                             </tr>
                             <tr>
@@ -1008,7 +1008,7 @@
                             </tr>
                             <tr>
                                 <td colspan="2">
-                                    <img src="https://www.dulmatesa.es/img/spacer-dulmatesa.png" width="1" height="2" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
+                                    <img src="https://www.dulmatesa.es/img/reciclado.png" width="1" height="2" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
                                 </td>
                             </tr>
                             <tr>
